--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       </section>
 
       <!--untuk perpustakaan-->
-      <section id="#perpustakaan">
+      <section id="perpustakaan">
         <div class="kolom">
           <p class="deskripsi">berbagai perpustakaan</p>
           <h2>Macam-macam Perpustakaan</h2>
@@ -90,7 +90,7 @@
       </section>
 
       <!--untuk form-->
-      <!DOCTYPE html>
+<section id="form Anggota">
 <html>
 <head>
 	<title> Formulir Perpanjangan Buku </title>
@@ -121,7 +121,7 @@
     </p>
 </fieldset>
 </body>
-
+</section>
 
 
 <h2 align="center"> Formulir keanggotan perpustakaan</h2>
