--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
               <a href="#perpustakaan">Perpustakaan</a>
             </li>
             <li><a href="#modul 1.2">modul 1.2</a></li>
-            <li><a href="form Anggota">Form Anggota</a></li>
+            <li><a href="#form Anggota">Form Anggota</a></li>
             <li><a href="#form Buku">Form Buku</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
